--- a/package.json
+++ b/package.json
@@ -30,15 +30,12 @@
   "engines": {
     "node": ">=0.10.0"
   },
-  "scripts": {
-    "test": "mocha"
-  },
   "dependencies": {
     "array-uniq": "^1.0.1",
     "minimist": "^1.1.0",
     "verbalize": "^0.1.2"
   },
   "devDependencies": {
-    "mocha": "*"
+    "verb": "0.6.2"
   }
 }
